# Backend-research

./: Cargo.toml  README.md  lib.rs  testmetadata.json  testmetadata.scale
.github/: auto-assign.yml
anta/: Cargo.toml
anta/src/: lib.rs
ordum-research-contract/: Cargo.toml
ordum-research-phala/: Cargo.toml
ordum-research-phala/artifacts/: ordum.contract  ordum.json  ordum.wasm
ordum-research-phala/src/: lib.rs
src/: main.rs
