[package]
name = "ordum"
version = "0.1.0"
authors = ["[MrishoLukamba@Ordum] <[ordum@protonmail.com]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_types = { version ="0.0.1", default-features = false }
ink_prelude = { version ="3.4.0", default-features= false }
hex = { version = "0.4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
#Open brush library
#openbrush = { version = "2.2.0", default-features = false }
pink-extension = { version = "0.2.0", default-features = false }

[dev-dependencies]
pink-extension-runtime = { version = "0.2.0", default-features = false }

[lib]
name = "socialgame"
path = "src/lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",
    "pink-extension/std",
    "hex/std"

    #"openbrush/std"
]
ink-as-dependency = []
